--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
     <img src="{{site.author.image}}" alt="{{site.author.name}}" />
     <p style="-moz-user-select: none; user-select: none;">
       {{site.author.bio}}
-      <a href="https://github.com/{{site.author.github}}"
-        >You should follow him on Github</a
+      <a href="https://twitter.com/{{site.author.twitter}}"
+        >You should follow him on Twitter</a
       >
     </p>
   </section>
