--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
 <footer>
   <p>
-    <small>Inspired by Gatsby starter blog.</small>
-    <br />
-    Developed with :heart: by <a href="https://github.com/sharadcodes">sharadcodes</a>
+   
+    Developed with :heart:
     <br />
     &copy; {{ "now" | date: "%Y" }}
   </p>
