--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,5 @@
   {%seo%}
   <script src="{{site.baseurl}}/assets/js/dmode.js"></script>
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/style.css" />
+  <link rel="shortcut icon" type="image/png" href="/favicon.png">
 </head>
