--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,7 @@
         <div class="content">
           {{content}}
         </div>
+        {% include convertkit.html %}
       </article>
       {% include footer.html %}
     </main>
